[gd_scene load_steps=8 format=4 uid="uid://lc2xwu2blfpk"]

[ext_resource type="PackedScene" uid="uid://c3lnqei4itfpx" path="res://Prefab/TowerDefense/Character/TowerDefensePlant.tscn" id="1"]
[ext_resource type="Script" uid="uid://bgagruresm55c" path="res://Asset/Anime/Character/Plant/Chapter1/SunBean/Scene/TowerDefensePlantSunBean.gd" id="2"]
[ext_resource type="Resource" uid="uid://cdg22sdahhuqq" path="res://Asset/Anime/Character/Plant/Chapter1/SunBean/Config/TowerDefensePlantSunBean.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://dmqoxfffxb663" path="res://Asset/Anime/Character/Plant/Chapter1/SunBean/SunBean.tscn" id="4"]
[ext_resource type="Script" uid="uid://b6lojhfkgvhsw" path="res://addons/AdobeAnimateEditor/Node/AdobeAnimateSlot.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://c5d74tbefbann" path="res://Script/Component/TowerDefense/Character/ProduceComponent/ProduceComponent.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://boq44pntt712l" path="res://Script/Component/TowerDefense/Character/GrowUpComponent/GrowUpComponent.tscn" id="7"]

[node name="TowerDefensePlantSunBean" node_paths=PackedStringArray("sprite") instance=ExtResource("1")]
z_index = -9
script = ExtResource("2")
produceInterval = 25.0
sunNum = 15
growUpTime = 60.0
config = ExtResource("3")
sprite = NodePath("SpriteGroup/TransformPoint/SunBean")
itemLayer = 6

[node name="TransformPoint" parent="SpriteGroup" index="1"]
position = Vector2(0, 30)

[node name="SunBean" parent="SpriteGroup/TransformPoint" index="0" node_paths=PackedStringArray("layerSlot", "layerSprite") instance=ExtResource("4")]
position = Vector2(0, -30)
trueFrameRate = 30.0
layerSlot = [null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, NodePath("AdobeAnimateSlot"), null]
layerSprite = [null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null]

[node name="AdobeAnimateSlot" type="Node2D" parent="SpriteGroup/TransformPoint/SunBean" index="0"]
position = Vector2(-20.6, -67.26)
scale = Vector2(0.638744, 0.63998)
script = ExtResource("5")
followSlotId = 23
metadata/_custom_type_script = "uid://b6lojhfkgvhsw"

[node name="Marker2D" type="Marker2D" parent="SpriteGroup/TransformPoint/SunBean/AdobeAnimateSlot" index="0"]
position = Vector2(25.9647, 36.4399)

[node name="ShadowSprite" parent="." index="3"]
visible = false
position = Vector2(0, 30)

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 0)

[node name="ProduceComponent" parent="." index="7" node_paths=PackedStringArray("marker") instance=ExtResource("6")]
unique_name_in_owner = true
num = 15
marker = [NodePath("../SpriteGroup/TransformPoint/SunBean/AdobeAnimateSlot/Marker2D")]

[node name="GrowUpComponent" parent="." index="8" instance=ExtResource("7")]
unique_name_in_owner = true
growUpTime = [60.0]
growUpSize = [1.25]

[node name="ShowHealthComponent" parent="." index="9"]
position = Vector2(0, -30)

[connection signal="grow" from="GrowUpComponent" to="." method="GowUp"]
